Changes in the index section and projects

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
                     <img src="public/assets/me.jpg" class="services__card-img">
                     <div class="card_content">
                         <h3 class="card__h3">
-                            Maquillaje fotografia
+                            Maquillaje Quinceañeras
                         </h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, aliquam!
                         </p>
-
                     </div>
                 </div>
                 <div class="services__card">
                     <img src="public/assets/me.jpg" class="services__card-img">
                     <div class="card_content">
                         <h3 class="card__h3">
-                            Maquillaje Quinceañeras
+                            Maquillaje fotografia
                         </h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, aliquam!
                         </p>
+
                     </div>
                 </div>
             </div>
@@ -126,9 +126,6 @@
                 <h2 class="customers__title">
                     Clientas Satisfechas
                 </h2>
-                <p class="costumbers__copy">
-                    <!-- Reseñas -->
-                </p>
             </div>
             <!-- Swiper -->
             <div class="swiper-container" id="Clientes">
@@ -274,7 +271,7 @@
         <section class="portfolio container" id="Proyectos">
 
             <h2 class="portfolio__title">
-                Proyectos
+                Trabajos
             </h2>
             <div class="container__cards">
                 <div class="card">
