--- a/public/projectsNov.html
+++ b/public/projectsNov.html
@@ -9,11 +9,12 @@
         rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
     <title>Alejandra Giudice</title>
 </head>
 
 <body>
-    <div class="scroll-up-btn">
+    <div class="scroll-up-btn btn--nav">
         <i class="fas fa-angle-up"></i>
     </div>
     <header class="header header__project">
@@ -26,7 +27,9 @@
             </div>
             <div class="navigation__links project--nav">
                 <a href="../index.html" class="link">Inicio</a>
-                <a href="../index.html#SobreMi" class="link">Sobre mi</a>
+                <a href="../index.html#SobreMi" class="link">Sobre</a>
+                <a href="../index.html#Servicios">Servicios</a>
+                <a href="../index.html#Clientes">Clientes</a>
                 <a href="../index.html#Proyectos" class="link">Proyectos</a>
                 <a href="../index.html#Contacto" class="link">Contacto</a>
             </div>
@@ -52,44 +55,44 @@
                 </div>
                 <div class="projects__cards">
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG1.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500" data-tag="madrinas">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG2.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500" data-tag="madrinas">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG3.JPG" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500" data-tag="madrinas">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG4.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500" data-tag="quinceañeras">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG5.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500" data-tag="quinceañeras">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG6.JPG" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500"
                         data-tag="quinceañeras">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG7.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG8.JPG" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG9.JPG" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Novias/IMG10.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                 </div>
