--- a/public/projectsQuin.html
+++ b/public/projectsQuin.html
@@ -9,11 +9,14 @@
         rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
     <title>Alejandra Giudice</title>
 </head>
 
 <body>
-    <div class="scroll-up-btn"></div>
+    <div class="scroll-up-btn btn--nav">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <header class="header header__project">
         <nav class=" navigation ">
             <div class="logo">
@@ -24,7 +27,9 @@
             </div>
             <div class="navigation__links project--nav">
                 <a href="../index.html" class="link">Inicio</a>
-                <a href="../index.html#SobreMi" class="link">Sobre mi</a>
+                <a href="../index.html#SobreMi" class="link">Sobre</a>
+                <a href="../index.html#Servicios">Servicios</a>
+                <a href="../index.html#Clientes">Clientes</a>
                 <a href="../index.html#Proyectos" class="link">Proyectos</a>
                 <a href="../index.html#Contacto" class="link">Contacto</a>
             </div>
@@ -50,51 +55,51 @@
                 </div>
                 <div class="projects__cards">
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img1.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img2.JPG" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img3.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img4.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img5.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img6.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img7.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img8.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img9.jpg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                     <div class="project__card show__more" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/image-card.jpg" alt="" class="project__img">
+                        <img src="assets/Quinceañeras/Img10.jpeg" alt="" class="project__img">
                         <h2 class="card__subtitle">Autor: Ale Make Up</h2>
                     </div>
                 </div>
                 <button class="projects__btn">Más</button>
             </section>
             <section class="imagen-light">
-                <img src="assets/bx-x.svg" class="close">
-                <img src="assets/image-card.jpg" class="agregar-imagen">
+                <img src="assets/bx-x.svg" class="close" id="close--quin">
+                <img src="assets/image-card.jpg" class="agregar-imagen" id="agregar-imagen--quin">
             </section>
             <div class="skew-two"></div>
         </div>
