--- a/public/projectsPro.html
+++ b/public/projectsPro.html
@@ -9,11 +9,14 @@
         rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
     <title>Alejandra Giudice</title>
 </head>
 
 <body>
-    <div class="scroll-up-btn"></div>
+    <div class="scroll-up-btn btn--nav">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <header class="header header__project">
         <nav class=" navigation">
             <div class="logo">
@@ -24,7 +27,9 @@
             </div>
             <div class="navigation__links project--nav">
                 <a href="../index.html" class="link">Inicio</a>
-                <a href="../index.html#SobreMi" class="link">Sobre mi</a>
+                <a href="../index.html#SobreMi" class="link">Sobre</a>
+                <a href="../index.html#Servicios">Servicios</a>
+                <a href="../index.html#Clientes">Clientes</a>
                 <a href="../index.html#Proyectos" class="link">Proyectos</a>
                 <a href="../index.html#Contacto" class="link">Contacto</a>
             </div>
